<resources>
    <string name="app_name">iVipBusiness</string>
    <string name="ivip_business">iVipBusiness</string>
    <string name="facebook_app_id">253770048377328</string>
    <string name="account_kit_clien_token">3385b9c4bf321a82d3dab85358cae9d8</string>
    <string name="google_server_key">AIzaSyAgoC7FzNT7LJE9B-q35LEZumZm8OH8VTY</string>
    <string name="text_back_press_to_exit">Nhấn back lần nữa để thoát app</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_reset_password">Quên mật khẩu</string>
    <string name="title_activity_active_account">Kích hoạt tài khoản</string>
    <string name="title_activity_profile">Thông tin tài khoản</string>
    <string name="title_activity_add_store">Tạo cửa hàng</string>
    <string name="title_activity_add_chain">Tạo chuỗi cửa hàng</string>
    <string name="title_activity_view_store">Thông tin cửa hàng</string>
    <string name="title_activity_list_store">Danh sách cửa hàng</string>
    <string name="title_activity_list_chain">Cửa hàng</string>
    <string name="title_activity_history">Lịch sử giao dịch</string>
    <string name="title_activity_list_member">Danh sách thành viên</string>
    <string name="title_activity_list_news">Bản tin</string>
    <string name="title_activity_gallery">Album ảnh</string>
    <string name="title_activity_statistic">Thống kê</string>
    <string name="title_activity_policy">Chính sách</string>
    <string name="title_activity_app_info">Thông tin ứng dụng</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_maps">Chọn địa chỉ</string>
    <string name="title_activity_add_news">Tạo bản tin</string>
    <string name="title_activity_update_profile">Cập nhật thông tin</string>
    <string name="title_activity_update_news">Cập nhật bản tin</string>
    <string name="title_activity_list_fcm">Danh sách gửi tin</string>
    <string name="title_activity_send_fcm">Gửi bản tin</string>
    <string name="title_activity_send_group">Gửi theo nhóm</string>
    <string name="title_activity_send_member">Gửi cho thành viên</string>
    <string name="title_activity_setting_store">Cài đặt cửa hàng</string>
    <string name="title_activity_setting_chain">Cài đặt chuỗi cửa hàng</string>
    <string name="title_activity_add_level">Thêm cấp bậc</string>
    <string name="title_activity_save_point">Tích điểm cho khác hàng</string>
    <string name="title_activity_show_image">Album ảnh</string>
    <string name="title_activity_check_in_user">Chụp ảnh tích điểm</string>
    <string name="title_activity_calculator">Máy tính</string>
    <string name="title_activity_resize_image">Chọn ảnh</string>
    <string name="title_activity_check_voucher">Kiểm tra mã khuyễn mãi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="service_code_key">XTL-IVIP-B</string>
    <string name="type_phone">PHONE-NUMBER</string>
    <string name="action_edit">Chỉnh sửa</string>
    <string name="action_user_info">Thông tin tài khoản</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Hoàn thành</string>
    <string name="action_create_store">Tạo cửa hàng</string>
    <string name="action_create_chain">Tạo chuỗi cửa hàng</string>
    <string name="action_send_to_people">Gửi tới mọi người</string>
    <string name="action_send_a_group">Gửi theo nhóm</string>
    <string name="action_send_member">Gửi cho thành viên</string>
    <string name="action_select_puplic">Công khai</string>
    <string name="action_select_private">Chỉ cho thành viên</string>
    <string name="action_store_info">Thông tin</string>
    <string name="action_stores">Cửa hàng</string>
    <string name="action_member">Thành viên</string>
    <string name="action_news">Bản tin</string>
    <string name="action_galeery">Album ảnh</string>
    <string name="action_rotate">Quay ảnh</string>
    <string name="action_crop">Crop</string>
    <string name="action_coupons">Phiếu giảm giá</string>
    <string name="doing_register">Đang tạo tài khoản…</string>
    <string name="doing_active">Đang kích hoạt tài khoản…</string>
    <string name="doing_login">Đang đăng nhập…</string>
    <string name="doing_reset">Đang lấy lại mật khẩu…</string>
    <string name="doing_add_news">Đang tạo bản tin…</string>
    <string name="can_not_load_data">Không thể tải dữ liệu</string>
    <string name="back">Quay lại</string>
    <string name="ok">OK</string>
    <string name="uploading_file">Đang tải ảnh…</string>
    <string name="adding_store">Đang tạo cửa hàng…</string>
    <string name="updating_store">Đang cập nhập…</string>
    <string name="doing_delete_news">Đang xóa bản tin…</string>
    <string name="doing_update_news">Đang cập nhật bản tin…</string>
    <string name="doing_send_fcm">Đang gửi bản tin…</string>
    <string name="doing_delete_gallery">Đang xóa ảnh…</string>
    <string name="doing_add_gallery">Đang thêm ảnh…</string>
    <string name="doing_update_setting">Đang cập nhật cài đặt…</string>
    <string name="doing_save_point">Đang cập nhật cài đặt…</string>
    <string name="doing_check_in">Đang check in…</string>
    <string name="doing_valid_check_voucher">Đang kiểm tra voucher…</string>
    <string name="doing_use_voucher">Sử dụng voucher…</string>
    <string name="doing_create_member_card">Đang tạo thẻ thành viên…</string>
    <string name="input_url_web">Nhập vào địa chỉ web</string>
    <string name="done">Xong</string>
    <string name="success_register">Đăng ký tài khoản thành công</string>
    <string name="success_active">Kích hoạt tài khoản thành công</string>
    <string name="success_reset">Lấy lại mật khẩu thành công</string>
    <string name="success_add_store">Thêm cửa hàng thành công</string>
    <string name="success_add_chain">Thêm trụ sở thành công</string>
    <string name="success_update_store">Cập nhật cửa hàng thành công</string>
    <string name="success_update_user">Cập nhật thông tin thành công</string>
    <string name="success_add_news">Thêm bản tin thành công</string>
    <string name="success_update_news">Cập nhật bản tin thành công</string>
    <string name="success_send_fcm">Gửi bản tin thành công</string>
    <string name="success_delete_gallery">Xóa ảnh thành công</string>
    <string name="success_add_gallery">Thêm ảnh thành công</string>
    <string name="success_update_setting">Cập nhật cài đặt thành công</string>
    <string name="success_save_point_name">Thành viên</string>
    <string name="success_save_point_addition">đã được cộng</string>
    <string name="success_save_point_point">điểm</string>
    <string name="success_use_voucher">Voucher đã được sử dụng</string>
    <string name="success_add_list_store">Thêm cửa hàng vào chuỗi cửa hàng thành công</string>
    <string name="have_error">Có lỗi xảy ra</string>
    <string name="error_validate_phone">Số điện thoại không hợp lệ</string>
    <string name="error_input_username">Vui lòng nhập số điện thoại</string>
    <string name="error_input_password">Vui lòng nhập mật khẩu</string>
    <string name="error_input_length_password">Mật khẩu phải từ 6 ký tự trở lên</string>
    <string name="error_input_new_password">Vui lòng nhập mật khẩu mới</string>
    <string name="error_input_re_password">Vui lòng nhập lại mật khẩu</string>
    <string name="error_input_fullname">Vui lòng nhập tên</string>
    <string name="error_input_avatar">Vui lòng chọn ảnh đại diện</string>
    <string name="error_input_gender">Vui lòng chọn giới tính</string>
    <string name="error_input_birthday">Vui lòng chọn ngày sinh</string>
    <string name="error_input_email">Vui lòng nhập email</string>
    <string name="error_input_address">Vui lòng nhập địa chỉ</string>
    <string name="error_input_store_name">Vui lòng nhập tên cửa hàng</string>
    <string name="error_input_phone">Vui lòng nhập số điện thoại</string>
    <string name="error_input_open_time">Vui lòng chọn thời gian mở cửa</string>
    <string name="error_input_close_time">Vui lòng chọn thời gian đóng cửa</string>
    <string name="error_input_begin_time">Vui lòng chọn thời gian bắt đầu</string>
    <string name="error_input_end_time">Vui lòng chọn thời gian kết thúc</string>
    <string name="error_input_alive_time">Vui lòng chọn thời gian hiệu lực</string>
    <string name="error_input_banner">Vui lòng chọn ảnh banner</string>
    <string name="error_input_logo">Vui lòng chọn ảnh logo</string>
    <string name="error_input_title">Vui lòng nhập tiêu đề</string>
    <string name="error_input_exchange_point">Vui lòng nhập điểm quy đổi</string>
    <string name="error_input_number_of_voucher">Vui lòng nhập số lượng voucher</string>
    <string name="error_input_sale">Vui lòng nhập phần trăm giảm giá</string>
    <string name="error_input_area">Vui lòng chọn khu vực</string>
    <string name="error_input_level">Vui lòng chọn cấp bậc</string>
    <string name="error_input_age">Vui lòng nhập tuổi</string>
    <string name="error_input_min_point">Vui lòng nhập số điểm tối thiểu</string>
    <string name="error_input_level_name">Vui lòng nhập tên cấp bậc</string>
    <string name="error_input_level_stt">Vui lòng nhập thứ tự cấp bậc</string>
    <string name="error_input_money">Vui lòng nhập số tiền</string>
    <string name="error_money">Số tiền không hợp lệ</string>
    <string name="error_input_add_level">Vui lòng tạo cấp bậc</string>
    <string name="error_input_result">Không có kết quả</string>
    <string name="error_input_member_card">Vui lòng chọn member card</string>
    <string name="error_input_bill_path">Vui lòng chụp ảnh hóa đơn</string>
    <string name="error_big_result">Kết quả quá lớn</string>
    <string name="error_invalidate_passwordd">Mật khẩu không khớp</string>
    <string name="error_not_alllow_permission">Không thể thực hiện chức năng do bạn chưa cấp quyền</string>
    <string name="error_no_internet">Không có kết nối internet</string>
    <string name="ivip_for_business_not_cap">Ivip For Business</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ liên lạc</string>
    <string name="store_address">Địa chỉ cửa hàng</string>
    <string name="store_des">Mô tả cửa hàng</string>
    <string-array name="store_type">
        <item>Thời trang làm đẹp</item>
        <item>Ăn uống</item>
        <item>Công nghệ</item>
        <item>Chăm sóc sức khỏe</item>
        <item>Dịch vụ khác</item>
    </string-array>
    <string name="news_des">Mô tả bản tin</string>
    <string name="remaining_point">Điểm còn lại</string>
    <string name="total_checkin">Số lần checkin</string>
    <string name="total_shopping">Số lần mua hàng</string>
    <string name="total_shopping_in_store">Số lần mua hàng tại store</string>
    <string name="last_checkin">Thồi gian checkin cuối</string>
    <string name="create_voucher">Tạo mã khuyến mãi</string>
    <string name="number_voucher">Số lượng voucher</string>
    <string name="sale_percent">Giảm (%)</string>
    <string name="start_time">Thời gian bắt đầu</string>
    <string name="end_time">Thời gian kết thúc</string>
    <string name="time_take_effect">Hiệu lực (phút)</string>
    <string name="exchange_point">Điểm quy đổi</string>
    <string name="total_point">Tổng số điểm</string>
    <string name="store">Cửa hàng</string>
    <string name="policy">Chính sách</string>
    <string name="statistic">Thống kê</string>
    <string name="app_info">Thông tin ứng dụng</string>
    <string name="faq">FAQ</string>
    <string name="edit_store">Sửa thông tin</string>
    <string name="setting_store">Cài đặt</string>
    <string name="save_point">Lưu điểm</string>
</resources>