<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav.view_store.info"
        android:checkable="true"
        android:enabled="true"
        android:icon="@mipmap/ic_store_info"
        android:title="@string/action_store_info" />
    <item
        android:id="@+id/nav.view_store.list_store"
        android:enabled="true"
        android:icon="@mipmap/ic_list_store"
        android:title="@string/action_stores" />
    <item
        android:id="@+id/nav.view_store.member"
        android:enabled="true"
        android:icon="@mipmap/ic_member"
        android:title="@string/action_member" />
    <item
        android:id="@+id/nav.view_store.news"
        android:enabled="true"
        android:icon="@mipmap/ic_news"
        android:title="@string/action_news" />
    <item
        android:id="@+id/nav.view_store.gallery"
        android:enabled="true"
        android:icon="@mipmap/ic_news_fcm"
        android:title="@string/action_galeery" />
</menu>