<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action.view_store.edit_store"
        android:icon="@drawable/ic_action_edit_line"
        android:orderInCategory="100"
        android:title="@string/edit_store"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action.view_store.setting_store"
        android:icon="@drawable/ic_action_setting"
        android:orderInCategory="100"
        android:title="@string/setting_store"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action.view_store.save_point"
        android:icon="@drawable/ic_action_qr_code"
        android:orderInCategory="100"
        android:title="@string/save_point"
        app:showAsAction="always" />
</menu>