<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_16">

    <EditText
        android:id="@+id/profile.edt_birth_day"
        style="@style/edittext_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:focusable="false"
        android:hint="@string/birth_day"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/profile.sp_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_8"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/profile.edt_phone"
        style="@style/edittext_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_8"
        android:focusable="false"
        android:hint="@string/phone"
        android:inputType="phone"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile.edt_email"
        style="@style/edittext_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_8"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/profile.edt_address"
        style="@style/edittext_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="@dimen/size_8"
        android:hint="@string/address"
        android:inputType="text"
        tools:ignore="LabelFor" />
</LinearLayout>