<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/size_16"
    android:paddingRight="@dimen/size_16"
    android:paddingTop="@dimen/size_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.xtel.ivipbusiness.view.widget.RoundImage
            android:id="@+id/item.member.img_avatar"
            android:layout_width="@dimen/size_40"
            android:layout_height="@dimen/size_40"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/item.member.txt_fullname"
            style="@style/textview_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginStart="@dimen/size_16"
            android:text="@string/app_name" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_point" />

            <TextView
                android:id="@+id/item.member.txt_total_point"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/app_name" />

            <TextView
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/remaining_point" />

            <TextView
                android:id="@+id/item.member.txt_remaining_point"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/app_name" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/size_1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_marginRight="@dimen/size_16"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item.member.txt_total_checkin"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_checkin" />

            <TextView
                android:id="@+id/item.member.txt_total_shopping"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/total_shopping" />

            <TextView
                android:id="@+id/item.member.txt_total_shopping_in_store"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/total_shopping_in_store" />

            <TextView
                android:id="@+id/item.member.txt_last_checkin"
                style="@style/textview_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:text="@string/last_checkin" />
        </LinearLayout>
    </TableRow>
</LinearLayout>