<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/size_16">

    <Spinner
        android:id="@+id/add_news.sp_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:background="@android:color/transparent" />

    <TextView
        style="@style/textview_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:drawableLeft="@drawable/ic_action_note"
        android:drawablePadding="@dimen/size_26"
        android:drawableStart="@drawable/ic_action_note"
        android:gravity="center_vertical"
        android:text="@string/news_des" />

    <EditText
        android:id="@+id/add_news.edt_des"
        style="@style/edittext_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_4"
        android:layout_marginRight="@dimen/size_4"
        android:layout_marginTop="@dimen/size_10"
        android:background="@drawable/edittext_des"
        android:inputType="textMultiLine"
        android:minLines="10"
        android:padding="@dimen/size_8"
        android:paddingBottom="@dimen/size_8" />

    <CheckBox
        android:id="@+id/add_news.chk_create_news"
        style="@style/checkbox_normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_36"
        android:layout_marginLeft="-2dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/create_voucher" />

    <LinearLayout
        android:id="@+id/add_news.layout_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_4"
        android:layout_marginRight="@dimen/size_4"
        android:layout_marginTop="@dimen/size_16"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_news.edt_number_of_voucher"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_weight="1"
                android:hint="@string/number_voucher"
                android:inputType="number" />

            <EditText
                android:id="@+id/add_news.edt_sale"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginLeft="-1dp"
                android:layout_marginStart="-1dp"
                android:layout_weight="1"
                android:hint="@string/sale_percent"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_news.edt_begin_time"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_weight="1"
                android:hint="@string/start_time"
                android:inputType="textCapSentences"
                android:longClickable="false" />

            <EditText
                android:id="@+id/add_news.edt_end_time"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginLeft="-1dp"
                android:layout_marginStart="-1dp"
                android:layout_weight="1"
                android:hint="@string/end_time"
                android:inputType="textCapSentences"
                android:longClickable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_news.edt_alive_time"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_weight="1"
                android:hint="@string/time_take_effect"
                android:inputType="textCapSentences"
                android:longClickable="false" />

            <EditText
                android:id="@+id/add_news.edt_exchange_point"
                style="@style/edittext_outline"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_48"
                android:layout_marginLeft="-1dp"
                android:layout_marginStart="-1dp"
                android:layout_weight="1"
                android:hint="@string/exchange_point"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <Spinner
            android:id="@+id/add_news.sp_type_salse"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginTop="@dimen/size_8"
            android:background="@android:color/transparent" />
    </LinearLayout>
</LinearLayout>