<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_16">

    <TextView
        android:id="@+id/store_info.txt_address"
        style="@style/textview_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/store_address" />

    <TextView
        android:id="@+id/store_info.txt_phone"
        style="@style/textview_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/store_info.txt_des"
        style="@style/textview_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:maxLines="4"
        android:text="@string/store_des" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:gravity="right|end|bottom|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.xtel.ivipbusiness.view.widget.SquareImageView
            android:id="@+id/store_info.img_qrCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/store_info.img_bar_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.35"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>
</LinearLayout>